--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>yGift</title>
+    <meta name="description" content="NFTs for gifts, grants, and gratitude" />
+    <meta property="og:description" content="NFTs for gifts, grants, and gratitude" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
